sdk/v0.3/stringsplitter.mdx
---
title: "pixeltable.iterators.StringSplitter"
sidebarTitle: "StringSplitter"
icon: "square-c"
---

Base class for Pixeltable iterators.


<a href="https://github.com/pixeltable/pixeltable/blob/v0.3/pixeltable/iterators/string.py#L8" target="_blank">View source on GitHub</a>

## Methods


---

### `close()`

Close the iterator and release all resources


**Signature:**

```python
close()-> None
```


---

### `create()`

**Signature:**

```python
create(**kwargs: Any)-> tuple[type[ComponentIterator], dict[str, Any]]
```


---

### `input_schema()`

Provide the Pixeltable types of the init() parameters


The keys need to match the names of the init() parameters. This is equivalent to the parameters_types parameter of the @function decorator.


**Signature:**

```python
input_schema(
    *args: Any,
    **kwargs: Any
)-> dict[str, pixeltable.type_system.ColumnType]
```


---

### `output_schema()`

Specify the dictionary returned by next() and a list of unstored column names


**Signature:**

```python
output_schema(
    *args: Any,
    **kwargs: Any
)-> tuple[dict[str, pixeltable.type_system.ColumnType], list[str]]
```

**Returns:**

- *tuple[dict[str, pixeltable.type_system.ColumnType], list[str]]*: a dictionary which is turned into a list of columns in the output table a list of unstored column names



---

### `set_pos()`

Set the iterator position to pos


**Signature:**

```python
set_pos(pos: int)-> None
```

