sdk/v0.4.24/stringsplitter.mdx
---
title: "StringSplitter"
icon: "square-c"
description: "<a href=\"https://github.com/pixeltable/pixeltable/blob/main/pixeltable/iterators/string.py#L8\" id=\"viewSource\" target=\"_blank\" rel=\"noopener noreferrer\"><img src=\"https://img.shields.io/badge/View%20Source%20on%20Github-blue?logo=github&labelColor=gray\" alt=\"View Source on GitHub\" style={{ display: 'inline', margin: '0px' }} noZoom /></a>"
noindex: true
---
# <span style={{ 'color': 'gray' }}>class</span>&nbsp; pixeltable.iterators.StringSplitter


Base class for Pixeltable iterators.


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; close()

```python
close() -> None
```

Close the iterator and release all resources


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; create()

```python
create(**kwargs: Any) -> tuple[type[ComponentIterator], dict[str, Any]]
```


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; input_schema()

```python
input_schema(
    *args: Any,
    **kwargs: Any
) -> dict[str, pixeltable.type_system.ColumnType]
```

Provide the Pixeltable types of the init() parameters

The keys need to match the names of the init() parameters. This is equivalent to the parameters_types
parameter of the @function decorator.


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; output_schema()

```python
output_schema(
    *args: Any,
    **kwargs: Any
) -> tuple[dict[str, pixeltable.type_system.ColumnType], list[str]]
```

Specify the dictionary returned by next() and a list of unstored column names


**Returns:**

- `tuple[dict[str, pixeltable.type_system.ColumnType], list[str]]`: a dictionary which is turned into a list of columns in the output table
  a list of unstored column names


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; set_pos()

```python
set_pos(pos: int) -> None
```

Set the iterator position to pos

